{
  "version": 4,
  "terraform_version": "1.6.2",
  "serial": 129,
  "lineage": "648f534c-9b9e-39b6-2d3b-2d825f3593f2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dc61aaff4e202a38",
            "association_id": "eipassoc-03031aa187a94bc69",
            "domain": "vpc",
            "id": "eipalloc-0dc61aaff4e202a38",
            "instance": "i-05fbd9979e9a618e2",
            "network_border_group": "us-east-2",
            "network_interface": "eni-04a0ada9b651e3427",
            "private_dns": "ip-10-0-0-165.us-east-2.compute.internal",
            "private_ip": "10.0.0.165",
            "public_dns": "ec2-3-19-155-252.us-east-2.compute.amazonaws.com",
            "public_ip": "3.19.155.252",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0536b10166370e5eb",
            "association_id": "eipassoc-045661afb6d5f2743",
            "domain": "vpc",
            "id": "eipalloc-0536b10166370e5eb",
            "instance": "i-0e47922fd17f28359",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0cf090bd904b40efe",
            "private_dns": "ip-10-0-0-239.us-east-2.compute.internal",
            "private_ip": "10.0.0.239",
            "public_dns": "ec2-3-16-104-169.us-east-2.compute.amazonaws.com",
            "public_ip": "3.16.104.169",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fa399d9c130ec923",
            "arn": "arn:aws:ec2:us-east-2:726205841680:instance/i-05fbd9979e9a618e2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05fbd9979e9a618e2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04a0ada9b651e3427",
            "private_dns": "ip-10-0-0-165.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.165",
            "public_dns": "ec2-3-19-155-252.us-east-2.compute.amazonaws.com",
            "public_ip": "3.19.155.252",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-060daece1d7ba8285",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a6e6de1fc754d7a8",
            "tags": {
              "Name": "my_ec2_instance-1"
            },
            "tags_all": {
              "Name": "my_ec2_instance-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-088e00e4339b970ab"
            ]
          },
          "dependencies": [
            "aws_security_group.my_instance_security",
            "aws_subnet.my_sub",
            "aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fa399d9c130ec923",
            "arn": "arn:aws:ec2:us-east-2:726205841680:instance/i-0e47922fd17f28359",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e47922fd17f28359",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cf090bd904b40efe",
            "private_dns": "ip-10-0-0-239.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.239",
            "public_dns": "ec2-3-16-104-169.us-east-2.compute.amazonaws.com",
            "public_ip": "3.16.104.169",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a7d12c448758cc25",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a6e6de1fc754d7a8",
            "tags": {
              "Name": "my_ec2_instance-2"
            },
            "tags_all": {
              "Name": "my_ec2_instance-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-088e00e4339b970ab"
            ]
          },
          "dependencies": [
            "aws_security_group.my_instance_security",
            "aws_subnet.my_sub",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:726205841680:internet-gateway/igw-024e720a60e2cfa59",
            "id": "igw-024e720a60e2cfa59",
            "owner_id": "726205841680",
            "tags": {
              "Name": "IGW_RAM"
            },
            "tags_all": {
              "Name": "IGW_RAM"
            },
            "vpc_id": "vpc-065695b4d7f124e2c"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:726205841680:route-table/rtb-082545e425eb304ba",
            "id": "rtb-082545e425eb304ba",
            "owner_id": "726205841680",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-024e720a60e2cfa59",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-065695b4d7f124e2c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_route_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d02b24b80c45e960",
            "route_table_id": "rtb-082545e425eb304ba",
            "subnet_id": "subnet-0a6e6de1fc754d7a8"
          },
          "dependencies": [
            "aws_internet_gateway.IGW2",
            "aws_route_table.route_table",
            "aws_subnet.my_sub",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_instance_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:726205841680:security-group/sg-088e00e4339b970ab",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-088e00e4339b970ab",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "security1",
            "name_prefix": "",
            "owner_id": "726205841680",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-065695b4d7f124e2c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:726205841680:subnet/subnet-0a6e6de1fc754d7a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6e6de1fc754d7a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "726205841680",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-065695b4d7f124e2c"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:726205841680:vpc/vpc-065695b4d7f124e2c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0522f1d145dee2651",
            "default_route_table_id": "rtb-01212beebd70e4ee8",
            "default_security_group_id": "sg-0c78e33e50e8d0a4d",
            "dhcp_options_id": "dopt-05d17413680f76fd7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-065695b4d7f124e2c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01212beebd70e4ee8",
            "owner_id": "726205841680",
            "tags": {
              "Name": "Ram_Private_VPC"
            },
            "tags_all": {
              "Name": "Ram_Private_VPC"
            }
          }
        }
      ]
    }
  ]
}